cc/css/style.css
/* ... */
.opskillCheckbox._selected,
.operatorCheckbox._selected {
  box-shadow: 0 0 2pt 1pt #dddddd, 1px 1px 2px var(--operator-shadow-color);
  background-color: rgb(35, 35, 35);
  transform: scale(var(--operator-selected-scale));
}
@media (hover: hover) {
  .operatorCheckbox:hover {
    background-color: rgb(25, 25, 25);
    transform: scale(1.1);
    z-index: 1;
    /* image-rendering: -moz-crisp-edges; */
    /* image-rendering: -o-crisp-edges; */
    /* image-rendering: -webkit-optimize-contrast; */
    /* image-rendering: crisp-edges; */
    /* -ms-interpolation-mode: nearest-neighbor; */
    box-shadow: 1px 1px 3px 1px var(--operator-shadow-color);
  }
  .operatorCheckbox._selected:hover {
    box-shadow: 0 0 2pt 1pt #dddddd,
      1px 1px 3px 1px var(--operator-shadow-color);
  }
}

.operatorCheckbox .name {
  height: var(--nameplate-height);
  line-height: var(--nameplate-height);
  text-align: center;
  color: white;
  fill: white; /* for text element */
  font-family: "Novecentosanswide Normal", Arial, sans-serif;
  background-color: rgba(255, 255, 255, 0.15);
  font-size: calc(0.6 * var(--nameplate-height));
  cursor: pointer;
  overflow: hidden;
}

.operatorCheckbox .name svg {
  width: 100%;
  height: 100%;
}

.operatorCheckbox > .data1,
.operatorCheckbox > .data2 {
  position: absolute;
  color: white;
  border: 1px solid grey;
  min-width: 1em;
  line-height: 1em;
  font-size: 0.9em;
  text-align: center;
  background: rgba(128, 128, 128, 0.8);
}

.operatorCheckbox > .data1 {
  right: 0;
}

.operatorCheckbox > .data2 {
  left: 0;
}

.riskHeader span {
  padding: 0 8px;
}
body,
.riskHeader,
#filters,
#topNav {
  background-color: var(--main-background-color);
  background: url("../images/noise.svg"), #333;
}
body {
  margin: 0px;
  color: var(--main-text-color);
}

.button,
.sliderBox {
  display: inline-block;
  border: 1px solid white;
  padding: 0.2em;
  border-radius: 0.2em;

  transition: all 0.1s ease-in-out;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -o-user-select: none;
  user-select: none;
  color: var(--main-text-color);
  font-size: 1.2rem;
  line-height: 1.2rem;
}

.button {
  cursor: pointer;
}
.rightButton,
.rightButton > .button {
  font-size: 1.2rem;
  line-height: 1.2rem;
  text-decoration: none;
}
.iconButton {
  width: 1.2rem;
  height: 1.2rem;
  /* font-size: 1rem; */
  /* align-self: flex-end; */
  text-align: center;
  justify-content: center;
  align-items: center;
  /* line-height: 1rem; */
  /* text-justify: center; */
  display: flex;
  text-decoration: none;
}

@media (hover: hover) {
  /* .gslide[data-dupe] .gslide-description:hover, */
  .button:not(.disabled):hover {
    color: black;
    background-color: white;
    text-shadow: none;
  }
}

/* .gslide[data-dupe] .gslide-description:active, */
.button:not(.disabled):active,
.button.checked {
  color: black;
  background: #cccccc;
}

.button.toggled,
.button.disabled {
  border: 1px solid gray;
}

.button.disabled {
  background: dimgrey;
}

.button.toggled.legend {
  text-shadow: none;
  opacity: 0.5;
}

.rightButton {
  align-self: center;
  margin-right: 0.25em;
  flex-shrink: 0;
}

.fa-home {
  /*transform: translateX(-4%);*/
}
#topNav,
#filters,
#cards {
  user-select: none;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -o-user-select: none;
  -ms-user-select: none;
}
#topNav {
  background: var(--main-background-color);
  /*overflow: hidden;*/
  position: fixed;
  top: 0;
  margin: 0;
  left: 0;
  right: 0;
  z-index: 99;
  display: flex;
  height: var(--topNav-height);
  padding: 5px;
  padding-left: 8px;
}
#filters {
  z-index: 3;
  width: 100%;
  position: -webkit-sticky;
  position: sticky;
  padding-top: 0.25em;
  top: calc(10px + var(--topNav-height));
  transition: top 0.1s ease-in-out;
  -o-transition: top 0.1s ease-in-out;
  -ms-transition: top 0.1s ease-in-out;
  -moz-transition: top 0.1s ease-in-out;
  -webkit-transition: top 0.1s ease-in-out;
}
#filters.hidden {
  top: -1000%;
}

@media (hover: hover) {
  body #filters.hidden.canSlide:hover,
  body #filters.hidden.canSlide.active,
  body #topNav:hover + #filters.hidden.canSlide {
    top: calc(10px + var(--topNav-height));
  }
  body #filters.canSlide,
  body #filters:not(.canSlide):not(.hidden) {
    border-bottom: 1px solid white;
    margin-bottom: -1px;
    box-shadow: 0 3px 8px #222222;
  }
}

#checkboxes.hidden {
  display: none;
}

#filters {
  display: inline-block;
}

.filterSlider {
  -webkit-appearance: none; /* Override default CSS styles */
  appearance: none;
  /* height: 25px; /* Specified height */
  height: 1em;
  background: #808080; /* Grey background */
  outline: none; /* Remove outline */
  opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
  -webkit-transition: 0.2s; /* 0.2 seconds transition on hover */
  transition: opacity 0.2s;
  border-radius: 0.5em;
}
/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
.filterSlider::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  width: 1.3em;
  height: 1.3em;
  background: #dddddd;
  cursor: pointer;
  border-radius: 50%;
}

.filterSlider::-moz-range-thumb {
  width: 1.3em;
  height: 1.3em;
  background: #dddddd;
  cursor: pointer;
  border-radius: 50%;
}

#raritySlider {
  width: 7em;
}
#opcountSlider {
  width: 13em;
}
#opcountDisp {
  width: 1em;
  display: inline-block;
  text-align: right;
}

img:not(.chartjs-size-monitor).hidden:not(.forceShow),
div:not(.chartjs-size-monitor).hidden:not(.forceShow) {
  display: none;
}
#legend {
  margin: 0 0.25rem;
  flex-grow: 1;
  align-self: center;
  display: flex;
}
.nav-spacer {
  max-width: 1.25rem;
  flex: 1 1;
}

#legend > * {
  margin: 0 0.125em;
  flex-shrink: 0;
}
/* ... */

